project/static/css/css-css_NYiFQQOJ7xKN-UNsYwHSy9B0FCXYVU-ZlvGwkwzENhA.css
/* ... */
.navbar .brand:hover,
.navbar .brand:focus {
    text-decoration: none;
}

.navbar-text {
    margin-bottom: 0;
    line-height: 40px;
    color: #777;
}

.navbar-link {
    color: #777;
}

.navbar-link:hover,
.navbar-link:focus {
    color: #363225;
}

.navbar .divider-vertical {
    height: 40px;
    margin: 0 9px;
    border-left: 1px solid #f2f2f2;
    border-right: 1px solid #ffffff;
}

.navbar .btn,
.navbar .btn-group {
    margin-top: 5px;
}

.navbar .btn-group .btn,
.navbar .input-prepend .btn,
.navbar .input-append .btn,
.navbar .input-prepend .btn-group,
.navbar .input-append .btn-group {
    margin-top: 0;
}

.navbar-form {
    margin-bottom: 0;
    *zoom: 1;
}

.navbar-form:before,
.navbar-form:after {
    display: table;
    content: "";
    line-height: 0;
}

.navbar-form:after {
    clear: both;
}

.navbar-form input,
.navbar-form select,
.navbar-form .radio,
.navbar-form .checkbox {
    margin-top: 5px;
}

.navbar-form input,
.navbar-form select,
.navbar-form .btn {
    display: inline-block;
    margin-bottom: 0;
}

.navbar-form input[type="image"],
.navbar-form input[type="checkbox"],
.navbar-form input[type="radio"] {
    margin-top: 3px;
}

.navbar-form .input-append,
.navbar-form .input-prepend {
    margin-top: 5px;
    white-space: nowrap;
}

.navbar-form .input-append input,
.navbar-form .input-prepend input {
    margin-top: 0;
}

.navbar-search {
    position: relative;
    float: left;
    margin-top: 5px;
    margin-bottom: 0;
}

.navbar-search .search-query {
    margin-bottom: 0;
    padding: 4px 14px;
    font-family: "Open Sans", sans-serif;
    font-size: 13px;
    font-weight: normal;
    line-height: 1;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
}

.navbar-static-top {
    position: static;
    margin-bottom: 0;
}

.navbar-static-top .navbar-inner {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}

.navbar-fixed-top,
.navbar-fixed-bottom {
    position: fixed;
    right: 0;
    left: 0;
    z-index: 1030;
    margin-bottom: 0;
}

.navbar-fixed-top .navbar-inner,
.navbar-static-top .navbar-inner {
    border-width: 0 0 1px;
}

.navbar-fixed-bottom .navbar-inner {
    border-width: 1px 0 0;
}

.navbar-fixed-top .navbar-inner,
.navbar-fixed-bottom .navbar-inner {
    padding-left: 0;
    padding-right: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}

.navbar-static-top .container,
.navbar-fixed-top .container,
.navbar-fixed-bottom .container {
    width: 940px;
}

.navbar-fixed-top {
    top: 0;
}

.navbar-fixed-top .navbar-inner,
.navbar-static-top .navbar-inner {
    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
}

.navbar-fixed-bottom {
    bottom: 0;
}

.navbar-fixed-bottom .navbar-inner {
    -webkit-box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
    box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
}

.navbar .nav {
    position: relative;
    left: 0;
    display: block;
    float: left;
    margin: 0 10px 0 0;
}

.navbar .nav.pull-right {
    float: right;
    margin-right: 0;
}

.navbar .nav>li {
    float: left;
}

/* Add styles for the navbar and ul elements */
.navbar {
    display: flex;
    justify-content: center;
}

.sf-menu.main-menu {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding-left: 0;
}

/* Add style for li elements */
.sf-menu.main-menu > li {
    display: flex;
    align-items: center;
    position: relative;
}

.sf-menu.main-menu > li > ul > li {
    display: block;
    text-align: left;
}


.navbar .nav>li>a {
    float: none;
    padding: 8px 15px 8px;
    color: #777;
    text-decoration: none;
    text-shadow: 0 1px 0 #ffffff;
}

.navbar .nav .dropdown-toggle .caret {
    margin-top: 8px;
}

.navbar .nav>li>a:focus,
.navbar .nav>li>a:hover {
    background-color: transparent;
    color: #363225;
    text-decoration: none;
}

.navbar .nav>.active>a,
.navbar .nav>.active>a:hover,
.navbar .nav>.active>a:focus {
    color: #81859b;
    text-decoration: none;
    background-color: #e6e6e6;
    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
}

.navbar .btn-navbar {
    display: none;
    float: right;
    padding: 7px 10px;
    margin-left: 5px;
    margin-right: 5px;
    color: #fff;
    background-color: transparent;
    border: none;
}

.navbar .btn-navbar:hover,
.navbar .btn-navbar:focus,
.navbar .btn-navbar:active,
.navbar .btn-navbar.active,
.navbar .btn-navbar.disabled,
.navbar .btn-navbar[disabled] {
    color: #fff;
}

.navbar .btn-navbar:active,
.navbar .btn-navbar.active {
    background-color: #cccccc \9;
}

.navbar .btn-navbar .icon-bar {
    display: block;
    width: 30px;
    height: 3px;
    margin: 5px 0;
    background-color: #dbaa00;
}

.navbar .btn-navbar .icon-bar .top-bar {
    transform: rotate(45deg) !important;
}

.navbar .btn-navbar .icon-bar .middle-bar {
    opacity: 0 !important;
}

.navbar .btn-navbar .icon-bar .bottom-bar {
    transform: rotate(-45deg) !important;
}

.btn-navbar .icon-bar+.icon-bar {
    margin-top: 3px;
}

.navbar .nav>li>.dropdown-menu:before {
    content: '';
    display: inline-block;
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
    border-bottom: 7px solid #ccc;
    border-bottom-color: rgba(0, 0, 0, 0.2);
    position: absolute;
    top: -7px;
    left: 9px;
}

.navbar .nav>li>.dropdown-menu:after {
    content: '';
    display: inline-block;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    border-bottom: 6px solid #f2f2f2;
    position: absolute;
    top: -6px;
    left: 10px;
}
/* ... */

